[gd_scene load_steps=11 format=3 uid="uid://dbt82bu8knnla"]

[ext_resource type="Script" path="res://scenes/world/UI/character_card.gd" id="1_77nke"]
[ext_resource type="Texture2D" uid="uid://cgr1j8m036jvd" path="res://assets/HUD/Inset_Grey.png" id="1_d5nix"]
[ext_resource type="Texture2D" uid="uid://btau2smtilkvs" path="res://assets/HUD/Health_Back.png" id="2_82psl"]
[ext_resource type="Texture2D" uid="uid://d24db5w2jk0xv" path="res://assets/HUD/Health_Front.png" id="3_oil3g"]
[ext_resource type="PackedScene" uid="uid://c3udtwudjk35w" path="res://scenes/world/UI/weapon_card.tscn" id="5_41mhb"]
[ext_resource type="PackedScene" uid="uid://v448sh8fvlpg" path="res://scenes/world/UI/armor_card.tscn" id="6_3mhoh"]
[ext_resource type="PackedScene" uid="uid://dvc68j6bo0nh6" path="res://scenes/world/UI/accessory_card.tscn" id="7_s2xmc"]

[sub_resource type="LabelSettings" id="LabelSettings_t8afs"]
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_7gr3b"]
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_f8lcp"]
font_size = 17

[node name="character_card" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1418.0
offset_bottom = -862.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_77nke")

[node name="BG" type="NinePatchRect" parent="."]
layout_mode = 0
offset_right = 502.0
offset_bottom = 240.0
texture = ExtResource("1_d5nix")
patch_margin_left = 18
patch_margin_top = 22
patch_margin_right = 18
patch_margin_bottom = 22

[node name="Name" type="Label" parent="."]
layout_mode = 2
offset_left = 22.0
offset_top = 23.0
offset_right = 330.0
offset_bottom = 54.0
text = "John Doe Re Mi Fa Sol La Si Doe"
label_settings = SubResource("LabelSettings_t8afs")

[node name="Level" type="Label" parent="."]
layout_mode = 2
offset_left = 350.0
offset_top = 23.0
offset_right = 471.0
offset_bottom = 54.0
text = "99 years old"
label_settings = SubResource("LabelSettings_t8afs")

[node name="HealthBar" type="TextureProgressBar" parent="."]
layout_mode = 2
offset_left = 22.0
offset_top = 48.0
offset_right = 483.0
offset_bottom = 102.0
value = 50.0
nine_patch_stretch = true
stretch_margin_left = 18
stretch_margin_top = 22
stretch_margin_right = 18
stretch_margin_bottom = 22
texture_under = ExtResource("2_82psl")
texture_progress = ExtResource("3_oil3g")

[node name="HP" type="Label" parent="."]
layout_mode = 0
offset_left = 226.0
offset_top = 60.0
offset_right = 280.0
offset_bottom = 91.0
text = "99/99"
label_settings = SubResource("LabelSettings_7gr3b")

[node name="Stats" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 33.0
offset_top = 102.0
offset_right = 213.0
offset_bottom = 188.0
columns = 4

[node name="STRLabel" type="Label" parent="Stats"]
layout_mode = 2
text = "STR"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DEXLabel" type="Label" parent="Stats"]
layout_mode = 2
text = "DEX
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CONLabel" type="Label" parent="Stats"]
layout_mode = 2
text = "CON"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SPDLabel" type="Label" parent="Stats"]
layout_mode = 2
text = "SPD"
horizontal_alignment = 1
vertical_alignment = 1

[node name="STRValue" type="Label" parent="Stats"]
layout_mode = 2
text = "99
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DEXValue" type="Label" parent="Stats"]
layout_mode = 2
text = "99
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CONValue" type="Label" parent="Stats"]
layout_mode = 2
text = "99
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SPDValue" type="Label" parent="Stats"]
layout_mode = 2
text = "99
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="STRMod" type="Label" parent="Stats"]
layout_mode = 2
text = "+99
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DEXMod" type="Label" parent="Stats"]
layout_mode = 2
text = "+99
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CONMod" type="Label" parent="Stats"]
layout_mode = 2
text = "+99
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SPDMod" type="Label" parent="Stats"]
layout_mode = 2
text = "+99
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="STRGr" type="Label" parent="Stats"]
layout_mode = 2
text = "100%"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DEXGr" type="Label" parent="Stats"]
layout_mode = 2
text = "100%"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CONGr" type="Label" parent="Stats"]
layout_mode = 2
text = "100%"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SPDGr" type="Label" parent="Stats"]
layout_mode = 2
text = "100%"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Class" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ClassName" type="Label" parent="Class"]
layout_mode = 0
offset_left = 243.0
offset_top = 103.0
offset_right = 474.0
offset_bottom = 129.0
text = "My Awesome class name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridContainer" type="GridContainer" parent="Class"]
layout_mode = 0
offset_left = 263.0
offset_top = 160.0
offset_right = 449.0
offset_bottom = 216.0
columns = 3

[node name="AttackLabel" type="Label" parent="Class/GridContainer"]
layout_mode = 2
text = "Attack"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DamageLabel" type="Label" parent="Class/GridContainer"]
layout_mode = 2
text = "Damage"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DefenceLabel" type="Label" parent="Class/GridContainer"]
layout_mode = 2
text = "Defence
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AttackScore" type="Label" parent="Class/GridContainer"]
layout_mode = 2
text = "+99"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DamageScore" type="Label" parent="Class/GridContainer"]
layout_mode = 2
text = "+99"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DefenceScore" type="Label" parent="Class/GridContainer"]
layout_mode = 2
text = "99"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Equipment" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="Equipment"]
layout_mode = 0
offset_left = 227.0
offset_top = 129.0
offset_right = 481.0
offset_bottom = 169.0
alignment = 1

[node name="Weapon" type="Label" parent="Equipment/HBoxContainer"]
layout_mode = 2
mouse_filter = 1
text = "WEAPON"
label_settings = SubResource("LabelSettings_f8lcp")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Armor" type="Label" parent="Equipment/HBoxContainer"]
layout_mode = 2
mouse_filter = 1
text = "ARMOR"
label_settings = SubResource("LabelSettings_f8lcp")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Accessory" type="Label" parent="Equipment/HBoxContainer"]
layout_mode = 2
mouse_filter = 1
text = "ACCESSORY"
label_settings = SubResource("LabelSettings_f8lcp")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemsCards" type="Control" parent="Equipment"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="weapon_card" parent="Equipment/ItemsCards" instance=ExtResource("5_41mhb")]
visible = false
z_index = 1
layout_mode = 1
offset_left = 491.0
offset_top = -1.0
offset_right = 491.0
offset_bottom = -1.0

[node name="armor_card" parent="Equipment/ItemsCards" instance=ExtResource("6_3mhoh")]
visible = false
z_index = 1
layout_mode = 1
offset_left = 491.0
offset_right = 491.0

[node name="accessory_card" parent="Equipment/ItemsCards" instance=ExtResource("7_s2xmc")]
visible = false
z_index = 1
layout_mode = 1
offset_left = 492.0
offset_right = 492.0

[connection signal="mouse_entered" from="Equipment/HBoxContainer/Weapon" to="." method="_on_weapon_mouse_entered"]
[connection signal="mouse_exited" from="Equipment/HBoxContainer/Weapon" to="." method="_on_weapon_mouse_exited"]
[connection signal="mouse_entered" from="Equipment/HBoxContainer/Armor" to="." method="_on_armor_mouse_entered"]
[connection signal="mouse_exited" from="Equipment/HBoxContainer/Armor" to="." method="_on_armor_mouse_exited"]
[connection signal="mouse_entered" from="Equipment/HBoxContainer/Accessory" to="." method="_on_accessory_mouse_entered"]
[connection signal="mouse_exited" from="Equipment/HBoxContainer/Accessory" to="." method="_on_accessory_mouse_exited"]
